WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113209
[Qt] docs: Fix module name format
https://bugs.webkit.org/show_bug.cgi?id=113209
Summary
[Qt] docs: Fix module name format
Sze Howe Koh
Reported
2013-03-25 08:23:25 PDT
[Qt] docs: Fix module name format
Attachments
Patch
(33.40 KB, patch)
2013-03-27 05:06 PDT
,
Sze Howe Koh
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Patch 2 -- Reverted Jocelyn's lines
(28.18 KB, patch)
2013-03-30 07:26 PDT
,
Sze Howe Koh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sze Howe Koh
Comment 1
2013-03-27 05:06:37 PDT
Created
attachment 195281
[details]
Patch
Sze Howe Koh
Comment 2
2013-03-27 05:17:26 PDT
This is basically
https://codereview.qt-project.org/#change,45909
minus the changes to code (non-QDoc) comments.
Build Bot
Comment 3
2013-03-27 06:35:07 PDT
Comment on
attachment 195281
[details]
Patch
Attachment 195281
[details]
did not pass win-ews (win): Output:
http://webkit-commit-queue.appspot.com/results/17289581
Jocelyn Turcotte
Comment 4
2013-03-27 07:00:10 PDT
Comment on
attachment 195281
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=195281&action=review
I think you can ignore the EWS error, this patch can't be related to the failure.
> Source/WebKit/qt/declarative/experimental/plugin.cpp:52 > - qWarning("\nWARNING: This project is using the experimental QML API extensions for QtWebKit and is therefore tied to a specific QtWebKit release.\n" > + qWarning("\nWARNING: This project is using the experimental QML API extensions for Qt WebKit and is therefore tied to a specific Qt WebKit release.\n"
I think this is not necessary, let's just fix the doc. Everywhere else in the code, wiki and internet QtWebKit have been refered as QtWebKit without a space, it has been a module since the beginning unlike the rest of Qt.
> Source/WebKit/qt/examples/platformplugin/README:12 > -that will provide combo boxes popups to QtWebKit. > +that will provide combo boxes popups to Qt WebKit. > > -QtWebKit will look for the plugins automatically so there is no need to make any other configuration to > +Qt WebKit will look for the plugins automatically so there is no need to make any other configuration to > put the plugin into use. To stop using the plugin just remove the directory $$[QT_INSTALL_PLUGINS]/webkit. > > A copy of qwebkitplatformplugin.h is provided with the example, as platform plugins should not depend > -on the precense of QtWebKit to build. > +on the precense of Qt WebKit to build. > > -This plugin can provide popups for <select multiple> elements but to use this feature QtWebKit must be > +This plugin can provide popups for <select multiple> elements but to use this feature Qt WebKit must be
ditto
> Tools/Scripts/webkitpy/layout_tests/port/qt.py:29 > -"""QtWebKit implementation of the Port interface.""" > +"""Qt WebKit implementation of the Port interface."""
ditto
> Tools/qmake/README:29 > -in Qt Creator, and for building QtWebKit. Normally you will build > +in Qt Creator, and for building Qt WebKit. Normally you will build
ditto
> Tools/qmake/mkspecs/features/configure.prf:114 > - addReasonForSkippingBuild("ICU is required. To build QtWebKit with Qt 5 you need to build Qt 5 with libICU support. Check for ICU support being mentioned in qtbase/config.summary.") > + addReasonForSkippingBuild("ICU is required. To build Qt WebKit with Qt 5 you need to build Qt 5 with libICU support. Check for ICU support being mentioned in qtbase/config.summary.")
ditto
Sze Howe Koh
Comment 5
2013-03-30 07:26:49 PDT
Created
attachment 195856
[details]
Patch 2 -- Reverted Jocelyn's lines Patch now only applies to QDoc-generated documentation
Jocelyn Turcotte
Comment 6
2013-04-04 07:41:45 PDT
Comment on
attachment 195856
[details]
Patch 2 -- Reverted Jocelyn's lines Thanks, please set the cq flag to '?' on the attachment as well (click "details") if you would like the commit queue to land your patch.
WebKit Review Bot
Comment 7
2013-04-04 09:16:59 PDT
Comment on
attachment 195856
[details]
Patch 2 -- Reverted Jocelyn's lines Clearing flags on attachment: 195856 Committed
r147637
: <
http://trac.webkit.org/changeset/147637
>
WebKit Review Bot
Comment 8
2013-04-04 09:17:03 PDT
All reviewed patches have been landed. Closing bug.
Jocelyn Turcotte
Comment 9
2013-04-05 03:08:46 PDT
Cherry-picking for 5.1 at
https://codereview.qt-project.org/53014
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug