[Qt] docs: Fix module name format https://bugs.webkit.org/show_bug.cgi?id=113209

Patch by Sze Howe Koh <szehowe.koh@gmail.com> on 2013-04-04
Reviewed by Jocelyn Turcotte.

Make QDoc-generated documentation follow the conventions at
http://qt-project.org/wiki/Spelling_Module_Names_in_Qt_Documentation

Source/WebKit/qt:

* Api/qwebdatabase.cpp:
* Api/qwebkitglobal.cpp:
* Api/qwebpluginfactory.cpp:
* Api/qwebsettings.cpp:
* WidgetApi/qgraphicswebview.cpp:
* WidgetApi/qwebframe.cpp:
* WidgetApi/qwebpage.cpp:
* WidgetApi/qwebview.cpp:
* docs/qtwebkit-bridge.qdoc:
* docs/qtwebkit-goes-mobile.qdoc:
* docs/qtwebkit.qdoc:

Source/WebKit2:

* UIProcess/API/qt/qquickwebview.cpp:

Canonical link: https://commits.webkit.org/132283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147637 268f45cc-cd09-0410-ab3c-d52691b4dbfc