Source/WebKit/qt/WidgetApi/qwebframe.cpp
@@ -242,7 +242,7 @@ QWebFrame::~QWebFrame()
 
     Qt properties will be exposed as JavaScript properties and slots as
     JavaScript methods.
-    The interaction between C++ and JavaScript is explained in the documentation of the \l{The QtWebKit Bridge}{QtWebKit bridge}.
+    The interaction between C++ and JavaScript is explained in the documentation of the \l{The Qt WebKit Bridge}{Qt WebKit bridge}.
 
     If you want to ensure that your QObjects remain accessible after loading a
     new URL, you should add them in a slot connected to the
